fix container wrapping

--- a/screen.css
+++ b/screen.css
@@ -1,7 +1,9 @@
 /* Add screen styles below */
+
+@import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
-    display: flex;
-    flex-direction: column;
+    font-family: "Chivo", sans-serif;
 }
 
 header {
@@ -22,9 +24,7 @@ nav{
 ul {
     display: flex;
 }
-.container {
-    flex-direction: column;
-}
+
 
 ul li {
     list-style-type: none;
@@ -43,6 +43,7 @@ ul li {
 }
 
 .metrics, .likes, .views {
+    display: flex;
     justify-content: flex-start;
     flex-direction: row;
     align-items: center;
@@ -54,7 +55,7 @@ ul li {
 }
 
 .metrics img {
-    width: 24px;
+    width: 16px;
     color: darkgrey;
 }
 
